@@ -1,7 +1,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.53)
-AC_INIT(ptabtools, 0.4.1, [jelmer@samba.org])
+AC_INIT(ptabtools, 0.4.2, [jelmer@samba.org])
 AC_CONFIG_SRCDIR([ptb.c])
 AC_CONFIG_HEADER([config.h])
 
