@@ -1,6 +1,6 @@
 /*
    Parser library for the PowerTab (PTB) file format
-   (c) 2004: Jelmer Vernooij <jelmer@samba.org>
+   (c) 2004-2005: Jelmer Vernooij <jelmer@samba.org>
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
